<resources>
    <string name="app_name">HomeMenu</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="vocabulary">Vocaulary</string>
    <string name="grammar">Grammar</string>
    <string name="article">Article</string>
    <string name="quiz">Quiz</string>
    <string name="community">Community</string>
    <string name="title">Title</string>
    <string name="galleries">Galleries</string>
    <string name="setting">Setting</string>
    <string name="more">More>></string>
</resources>
