<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none"
    android:layout_weight="1"
    tools:context=".MainActivity">


<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_columnWeight="1">

    <TableRow>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight=".6"
            android:layout_height="@dimen/buttonRow1">
        <ImageButton
            android:id="@+id/btnVocabulary"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/rec_yellow"/>
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center"
             android:textSize="@dimen/fontSize_home"
             android:text="@string/vocabulary"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight=".4"
            android:layout_height="@dimen/buttonRow1">
            <ImageButton
                android:id="@+id/btnGrammar"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/rec_blue"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:textSize="@dimen/fontSize_home"
                android:text="@string/grammar"/>
        </FrameLayout>
    </TableRow>

    <TableRow>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/buttonRow2">
            <ImageButton
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:background="@drawable/rec_green"/>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:id="@+id/article"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:textSize="@dimen/fontSize_home"
                    android:text="@string/article"/>
                <TextView
                    android:id="@+id/moreArticle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/fontSize_home"
                    android:text="@string/more"/>
                <ImageView
                    android:id="@+id/articleImage"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_below="@+id/article"
                    android:scaleType="fitXY"
                    android:src="@drawable/rec_pink"/>
                <TextView
                    android:id="@+id/articleTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="bottom"
                    android:textSize="@dimen/fontSize_home"
                    android:textColor="#FFFFFF"
                    android:text="@string/title"/>
            </RelativeLayout>
        </FrameLayout>
    </TableRow>
    <TableRow>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight=".4"
            android:layout_height="@dimen/buttonRow1">
            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/rec_yellow"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:textSize="@dimen/fontSize_home"
                android:text="@string/quiz"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight=".6"
            android:layout_height="@dimen/buttonRow1">
            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/rec_blue"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:textSize="@dimen/fontSize_home"
                android:text="@string/community"/>
        </FrameLayout>
    </TableRow>

    <TableRow>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight=".6"
            android:layout_height="@dimen/buttonRow1">
            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/rec_orange"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:textSize="@dimen/fontSize_home"
                android:text="@string/galleries"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight=".4"
            android:layout_height="@dimen/buttonRow1">
            <ImageButton
                android:id="@+id/btnSetting"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/rec_green"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:textSize="@dimen/fontSize_home"
                android:text="@string/setting"/>
        </FrameLayout>
    </TableRow>



</TableLayout>
</ScrollView>